--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,6 +3,12 @@
   <h1>{{ .Title }}</h1>
   <time datetime={{ .Date.Format "2006-01-02T15:04:05Z0700" }} class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</time>
   {{ .Content }}
+  {{ with .Params.tags }}
+  <h2>Posted in</h2>
+      {{ range . }}
+        <a href="{{ "tags/" | absURL }}{{ . | urlize }}">{{ . }}</a>
+      {{ end }}
+    {{ end }}
 </div>
 
 {{ if .Site.DisqusShortname -}}
