--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,8 +5,8 @@
     {{ block "main" . -}}{{- end }}
     </main>
 
-    {{ if not .Site.IsServer }}
+    <!-- {{ if not .Site.IsServer }}
       {{ template "partials/plausible.html" . }}
-    {{ end }}
+    {{ end }} -->
   </body>
 </html>
