--- a/layouts/partials/plausible.html
+++ b/layouts/partials/plausible.html
@@ -1,1 +1,1 @@
-<script defer data-domain="appelsiini.net" src="https://plausible.io/js/plausible.js"></script>
+<script defer data-domain="appelsiini.net" src="https://www.appelsiini.net/js/script.js"></script>
