--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -40,5 +40,7 @@
     {{ printf `<link href="%s" rel="%s" type="%s" title="%s" />` .Permalink .Rel .MediaType.Type $.Site.Title | safeHTML }}
   {{ end -}}
 
+  {{ partial "plausible.html" . }}
+
   {{ partial "hook_head_end.html" . }}
 </head>
